[project]
name = "comfyui-disty-flow"
description = "Flow is a custom node designed to provide a more user-friendly interface for ComfyUI by acting as an alternative user interface for running workflows. It is not a replacement for workflow creation.\nFlow is currently in the early stages of development, so expect bugs and ongoing feature enhancements. With your support and feedback, Flow will settle into a steady stream."
version = "0.4.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/diStyApps/ComfyUI-disty-Flow"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "disty"
DisplayName = "ComfyUI-disty-Flow"
Icon = ""
